--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\"  \"npm run client\" "
+    "dev": "concurrently \"npm run server\"  \"npm run client\" ",
+    "build": "grunt dist",
+    "postinstall": "./node_modules/bower/bin/bower install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +25,8 @@
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "bower":"^1.8.0",
+    "grunt":"^1.0.1"
   }
 }
