--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
